--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -1029,7 +1029,7 @@
                                     <property name="name">
                                         <cstring>unnamed</cstring>
                                     </property>
-                                    <widget class="KPushButton" row="2" column="3">
+                                    <widget class="KPushButton" row="2" column="2">
                                         <property name="name">
                                             <cstring>addButton</cstring>
                                         </property>
@@ -1045,7 +1045,23 @@
                                             <string></string>
                                         </property>
                                     </widget>
-                                    <widget class="KPushButton" row="2" column="2">
+                                    <widget class="KPushButton" row="2" column="3">
+                                        <property name="name">
+                                            <cstring>updateButton</cstring>
+                                        </property>
+                                        <property name="sizePolicy">
+                                            <sizepolicy>
+                                                <hsizetype>0</hsizetype>
+                                                <vsizetype>1</vsizetype>
+                                                <horstretch>0</horstretch>
+                                                <verstretch>0</verstretch>
+                                            </sizepolicy>
+                                        </property>
+                                        <property name="text">
+                                            <string></string>
+                                        </property>
+                                    </widget>
+                                    <widget class="KPushButton" row="2" column="4">
                                         <property name="name">
                                             <cstring>removeButton</cstring>
                                         </property>
@@ -1077,7 +1093,7 @@
                                             <string>Position:</string>
                                         </property>
                                     </widget>
-                                    <widget class="KDoubleNumInput" row="0" column="1" rowspan="1" colspan="3">
+                                    <widget class="KDoubleNumInput" row="0" column="1" rowspan="1" colspan="4">
                                         <property name="name">
                                             <cstring>stopPosition</cstring>
                                         </property>
@@ -1088,7 +1104,7 @@
                                             <string>%</string>
                                         </property>
                                     </widget>
-                                    <widget class="KDoubleNumInput" row="1" column="1" rowspan="1" colspan="3">
+                                    <widget class="KDoubleNumInput" row="1" column="1" rowspan="1" colspan="4">
                                         <property name="name">
                                             <cstring>stopValue</cstring>
                                         </property>
@@ -1469,7 +1485,10 @@
     <tabstop>gradCombo</tabstop>
     <tabstop>gradStops</tabstop>
     <tabstop>gradLightBorder</tabstop>
+    <tabstop>stopPosition</tabstop>
+    <tabstop>stopValue</tabstop>
     <tabstop>addButton</tabstop>
+    <tabstop>updateButton</tabstop>
     <tabstop>removeButton</tabstop>
     <tabstop>previewColor</tabstop>
     <tabstop>shading</tabstop>
